--- a/package.json
+++ b/package.json
@@ -8,9 +8,8 @@
     "clean": "rimraf lib",
     "commit": "git-cz",
     "lint": "eslint src test",
-    "prepublish": "npm run clean && npm run build",
     "test": "mocha --compilers js:babel-core/register test/*.js",
-    "semantic-release": "semantic-release pre && npm publish && semantic-release post"
+    "semantic-release": "semantic-release pre && npm run build && npm publish && semantic-release post"
   },
   "author": {
     "name": "Colin Meinke",
