--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "commit": "git-cz",
     "lint": "eslint src test",
     "test": "mocha --compilers js:babel-core/register test/*.js",
-    "semantic-release": "semantic-release pre && npm run build && npm publish && semantic-release post"
+    "semantic-release": "semantic-release pre && npm publish && semantic-release post"
   },
   "author": {
     "name": "Colin Meinke",
