--- a/package.json
+++ b/package.json
@@ -32,6 +32,9 @@
     "properties",
     "props"
   ],
+  "dependencies": {
+    "babel-polyfill": "^6.3.14"
+  },
   "peerDependencies": {
     "postcss": "^5.0.14"
   },
@@ -40,7 +43,6 @@
     "babel-core": "^6.4.0",
     "babel-eslint": "^5.0.0-beta6",
     "babel-plugin-transform-object-rest-spread": "^6.3.13",
-    "babel-polyfill": "^6.3.14",
     "babel-preset-es2015": "^6.3.13",
     "commitizen": "^2.4.6",
     "cz-conventional-changelog": "^1.1.5",
