chore: update url

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "author": {
     "name": "Colin Meinke",
     "email": "hello@colinmeinke.com",
-    "url": "colinmeinke.com"
+    "url": "https://colinmeinke.com"
   },
   "babel": {
     "plugins": [
